[tool.poetry]
name = "dashboard"
version = "0.1.0"
description = ""
authors = ["Kanav Arora <kanavlt885@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
clickhouse-driver = "^0.2.9"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.7.0"
pydantic = "^2.10.3"
dash = "^2.18.2"
pytz = "^2024.2"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
